# chamak

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: nifty50.json
src/chamak/: __main__.py  cli.py  config.py
src/chamak/core/: errors.py  ids.py  models.py
src/chamak/demo/: __init__.py  data.py  mindmaps.py  news.py  prices.py  seeder.py
src/chamak/explain/: render.py  verdict.py
src/chamak/graph/: diff.py  mindmap.py  serialize.py
src/chamak/interview/: archetype.py  assistant.py  engine.py  script.yaml
src/chamak/llm/: base.py  null.py  openrouter.py
src/chamak/market_data/: base.py  cache.py  ingest.py  screener_in_adapter.py  tickers.py  universe.py  yfinance_adapter.py
src/chamak/news/: base.py  repository.py  rss.py  sentiment.py
src/chamak/portfolio/: analysis.py
src/chamak/recommendation/: engine.py
src/chamak/rules/: ast.py  candidates.py  compiler.py  evaluator.py  metrics.py  parser.py  plain.py
src/chamak/scoring/: engine.py
src/chamak/storage/: db.py  migrator.py
src/chamak/storage/migrations/: 0001_init.sql
src/chamak/storage/repositories/: audit.py  mindmaps.py  portfolios.py  stocks.py  versions.py
src/chamak/tui/: app.py  keys.py  palette.py  search.py  theme.py
src/chamak/tui/screens/: dashboard.py  (+15 more)
tests/: conftest.py  test_demo.py  test_demo_pilot.py  test_demo_recording.py  test_flowchart.py  test_graph_diff.py  test_interview_script.py  test_migrations.py  test_news_sentiment.py  test_plain_english.py  test_rule_compiler.py  test_scoring.py  test_simple_mode.py  test_tui_all_screens.py  test_tui_smoke.py
(+14 files in other folders)
